2009-11-27 Braden McDaniel  <braden@endoframe.com>

	* src/script/java.cpp (load_libjvm::load_libjvm()): Improved error
	messages when loading libjvm fails.

2009-11-26 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Upgraded for Doxygen 1.6.1.

2009-11-25 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/navigation_info.cpp
	(NAVIGATION_INFO_INTERFACE_SEQ): Fixed typo in "visibilityLimit".

2009-11-25 Braden McDaniel  <braden@endoframe.com>

	Generate openvrml::node_type::do_create_type implementations using
	the Boost.Preprocessor library.

	* src/libopenvrml/openvrml/node_impl_util.cpp: Added doc-comment
	for OPENVRML_NODE_IMPL_UTIL_DEFINE_DO_CREATE_TYPE.
	* src/libopenvrml/openvrml/node_impl_util.h: Added
	OPENVRML_NODE_IMPL_UTIL_DEFINE_DO_CREATE_TYPE and supporting
	macros.
	* src/node/vrml97/anchor.cpp
	* src/node/vrml97/appearance.cpp
	* src/node/vrml97/audio_clip.cpp
	* src/node/vrml97/background.cpp
	* src/node/vrml97/billboard.cpp
	* src/node/vrml97/box.cpp
	* src/node/vrml97/cad_assembly.cpp
	* src/node/vrml97/cad_layer.cpp
	* src/node/vrml97/collision.cpp
	* src/node/vrml97/color.cpp
	* src/node/vrml97/color_interpolator.cpp
	* src/node/vrml97/cone.cpp
	* src/node/vrml97/coordinate.cpp
	* src/node/vrml97/coordinate_interpolator.cpp
	* src/node/vrml97/cylinder.cpp
	* src/node/vrml97/cylinder_sensor.cpp
	* src/node/vrml97/directional_light.cpp
	* src/node/vrml97/elevation_grid.cpp
	* src/node/vrml97/extrusion.cpp
	* src/node/vrml97/fog.cpp
	* src/node/vrml97/font_style.cpp
	* src/node/vrml97/group.cpp
	* src/node/vrml97/image_texture.cpp
	* src/node/vrml97/indexed_face_set.cpp
	* src/node/vrml97/indexed_line_set.cpp
	* src/node/vrml97/inline.cpp
	* src/node/vrml97/lod.cpp
	* src/node/vrml97/material.cpp
	* src/node/vrml97/navigation_info.cpp
	* src/node/vrml97/normal.cpp
	* src/node/vrml97/normal_interpolator.cpp
	* src/node/vrml97/orientation_interpolator.cpp
	* src/node/vrml97/pixel_texture.cpp
	* src/node/vrml97/plane_sensor.cpp