@@ -1,3 +1,8 @@
+2009-11-28 Braden McDaniel  <braden@endoframe.com>
+
+	* src/Makefile.am: Only install openvrml-player.ui if we were
+	configured to build openvrml-player.
+
 2009-11-27 Braden McDaniel  <braden@endoframe.com>
 
 	* src/script/java.cpp (load_libjvm::load_libjvm()): Improved error
